<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.thiago.trabalhoconclusao.fragments.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/about_logo_size"
                    android:layout_height="@dimen/about_logo_size"
                    android:contentDescription="@string/app_logo"
                    android:src="@mipmap/ic_launcher" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/about_default_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="@dimen/about_app_title"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiap"
                android:layout_marginTop="@dimen/about_default_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_default_margin"
                android:text="@string/about_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_adress2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_address3" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/about_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_default_margin"
                android:onClick="viewMap"
                android:text="@string/about_view_map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_default_margin"
                android:text="@string/about_phone" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/about_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_default_margin"
                android:onClick="callMe"
                android:text="@string/about_call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/developed_by_" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_email" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
