<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/nav_header_horizontal_spacing"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    android:paddingBottom="@dimen/nav_header_vertical_spacing"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/app_logo"
            android:layout_width="@dimen/nav_header_ivLogo"
            android:layout_height="@dimen/nav_header_ivLogo"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/nav_header_tvPadding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/nav_header_tvTextSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_tvPadding"
        android:text="@string/developed_by_" />

</LinearLayout>
