<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.thiago.trabalhoconclusao.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/login_maginTop"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:text="@string/username"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:text="@string/password"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbStaySigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_signed"
        android:textColor="@color/secondary_text"
        android:layout_marginLeft="@dimen/login_cb_marginLeft"
        android:layout_marginTop="@dimen/login_cb_marginTop"/>

    <Button
        android:id="@+id/btLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="@dimen/login_cb_marginTop"
        android:layout_gravity="center_horizontal"
        android:onClick="login"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/textsize_facebook_login"
        android:paddingTop="@dimen/padding_facebook_login"
        android:paddingBottom="@dimen/padding_facebook_login"
        android:layout_marginTop="@dimen/login_cb_marginTop"/>

</LinearLayout>
